# raylib-quickstart

./: CLAUDE.md  CMakeLists.txt
.claude/: settings.local.json
docs/: PRD.xml  flashlight-darkness-mechanics-plan.xml  implementation-plan.xml
src/: Entity.h  GameState.h  Utils.h  main.cpp
